# IncompleteCProject

./: CMakeLists.txt
Emulator/: Decode.c  Decode.h  Execute.c  Execute.h  Processor.c  Processor.h  main.c
Emulator/Execution/: DPImmediate.c  DPImmediate.h
